dataPinta icon correction safari try2

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -38,11 +38,10 @@
     height: auto;
   }
   .home .col-8{
-    padding-left: 0;
+    padding: 0;
   }
-  .home .col-2:last-child{
-    padding-left: 0px;
-    padding-right: 30px;
+  .home .col-2{
+    padding: 0;
   }
   footer.home .col-lg-4{
     padding-top: 5px;
